# hdf5serie

./: .gitignore  .map-svn-git  Makefile.am  README  configure.ac  hdf5serie.pc.in
doc/: Doxyfile.in
h5plotserie/: Makefile.am  NOTICE  README  configure.ac
h5plotserie/h5plotserie/: Makefile.am  curves.cc  curves.h  dataselection.cc  dataselection.h  desktopIntegration.bat  dialogs.cc  dialogs.h  h5plotserie.qrc  h5plotserie.rc  main.cc  mainwindow.cc  mainwindow.h  mbsim-env.de.h5plotserie.desktop  mbsim-env.de.h5plotserie.source.bat  mbsim-env.de.h5plotserie.xml  mbsim-env.org.h5plotserie.desktop  mbsim-env.org.h5plotserie.xml  mimeapps-h5plotserie.list  plotarea.cc  plotarea.h  plotdata.h  treewidgetitem.h
h5plotserie/h5plotserie/freedesktop.org/: mbsim-env.h5plotserie.desktop  mbsim-env.h5plotserie.xml  mimeapps-h5plotserie.list
h5plotserie/h5pyplotserie/: H5PlotSerie.py  H5QtMPLCanvas.py  HDF5Serie.py  __main__.py
h5plotserie_dev/: configure.ac  curves.cpp  curves.h  h5plotserie.pro  main.cpp  plotarea.cpp  plotdata.h
h5plotserie_dev/h5plotserie/: dataselection.cc  mainwindow.cc  plotarea.cc  plotdata.h
hdf5serie/: Makefile.am  NOTICE  README  configure.ac  fileserie.cc  hdf5serie.pc.in  knownpodtypes.def  matrixserie.cc  matrixserie.h  simpleattribute.cc  simpleattribute.h  simpledataset.cc  simpledataset.h  structserie.h  toh5type.h  vectorserie.cc  vectorserie.h
hdf5serie/check/: testdump.sh  testlib.cc  valgrindtestlib.sh
hdf5serie/doc/: doxyfile.in  myheader.html
hdf5serie/dump/: Makefile.am  h5dumpserie.cc  h5dumpserie.txt  h5lsserie.bat.in  h5lsserie.in  h5lsserie.xsl
hdf5serie/hdf5serie/: Makefile.am  complexdataset.cc  complexdataset.h  file.cc  file.h  fileserie.cc  fileserie.h  group.cc  group.h  interface.cc  interface.h  interface_creatoroperator_iter.h  knownpodtypes.def  knowntypes.def  matrixserie.cc  matrixserie.h  options.h  simple.cc  simple.h  simpleattribute.cc  simpleattribute.h  simpledataset.cc  simpledataset.h  structserie.h  toh5type.cc  toh5type.h  utils.h  vectorserie.cc  vectorserie.h
hdf5serie/hdf5serie/check/: Makefile.am  testdump.sh.in  testlib.cc  testlib.sh.in  valgrindtestdump.sh  valgrindtestdump.sh.in  valgrindtestlib.sh  valgrindtestlib.sh.in
hdf5serie/hdf5serie/dump/: Makefile.am  h5dumpserie.cc  h5dumpserie.m.in  h5dumpserie.rc  h5dumpserie.txt  h5flushserie.cc  h5lockserie.cc  h5lockserie.rc  h5lsserie.bat.in  h5lsserie.cc  h5lsserie.in  h5lsserie.rc  h5lsserie.xsl  hdf5serieappenddataset.m.in
hdf5serie/hdf5serie/rereadmetadata/: Makefile.am  base.cc
hdf5serie/rereadmetadata/: base.cc  base.h  groupro.cc  groupro.h  h5filero.h  structseriero.h  vectorseriero.h
hdf5serie/rereadmetadata/readwritetest/: Makefile.am  read.cc  write.cc
release-1.0.0/: Makefile.am  README
release-1.0.0/h5plotserie/: main.cc  mainwindow.cc  treewidgetitem.h
release-1.0.0/hdf5serie/: simpleattribute.h  simpledataset.cc
release-1.0.1/: hdf5serie.pc.in
release-1.0.1/hdf5serie/: fileserie.cc  matrixserie.cc  matrixserie.h  (+4 more)
src/: Makefile.am  knowntypes.def  serie1d.cc  serie1d.h  serie2d.cc  serie2d.h  simpleattribute.h  simpledataset.h  structserie.h  toh5type.cc  toh5type.h  vectorserie.cc  vectorserie.h
src/check/: testlib.cc  valgrindtestdump.sh
src/dump/: h5dumpserie.cc  h5dumpserie.txt
src/rereadmetadata/: Makefile.am  h5filero.cc  h5filero.h  serie1dro.h  serie2dro.h
src/rereadmetadata/readwritetest/: read.cc  write.cc
trunk/: Makefile.am  README  configure.ac  hdf5serie.pc.in
trunk/doc/: Doxyfile.in  myheader.html
trunk/h5plotserie/: Makefile.am  configure.ac
trunk/h5plotserie/h5plotserie/: Makefile.am  curves.cc  curves.h  dataselection.cc  dataselection.h  main.cc  mainwindow.cc  mainwindow.h  plotarea.cc  treewidgetitem.h
trunk/h5plotserie/h5pyplotserie/: H5PlotSerie.py  H5QtMPLCanvas.py  HDF5Serie.py  __init__.py  __main__.py
trunk/h5plotserie_dev/: configure.ac  curves.h  main.cpp  mainwindow.cpp  mainwindow.h
trunk/h5plotserie_dev/h5plotserie/: Makefile.am  curves.h  dataselection.cc  dataselection.h  main.cc  mainwindow.cc  plotarea.cc  plotarea.h
trunk/hdf5serie/: Makefile.am  README  configure.ac  fileserie.cc  fileserie.h  hdf5serie.pc.in  knownpodtypes.def  matrixserie.cc  matrixserie.h  simpleattribute.cc  simpledataset.cc  simpledataset.h  structserie.h  toh5type.cc  vectorserie.cc  vectorserie.h
trunk/hdf5serie/check/: testlib.cc  valgrindtestdump.sh
trunk/hdf5serie/doc/: Doxyfile.in  Makefile.am  myheader.html
trunk/hdf5serie/dump/: Makefile.am  h5dumpserie.cc  h5dumpserie.m.in  h5dumpserie.txt  h5lsserie.bat.in  h5lsserie.in  h5lsserie.xsl
trunk/hdf5serie/hdf5serie/: Makefile.am  file.cc  file.h  fileserie.cc  fileserie.h  interface.cc  interface.h  interface_creatoroperator_iter.h  knownpodtypes.def  knowntypes.def  matrixserie.cc  matrixserie.h  simpleattribute.cc  simpleattribute.h  simpledataset.cc  simpledataset.h  structserie.h  toh5type.cc  toh5type.h  vectorserie.cc  vectorserie.h
trunk/hdf5serie/hdf5serie/check/: Makefile.am  testdump.sh.in  testlib.cc  valgrindtestdump.sh  valgrindtestlib.sh
trunk/hdf5serie/hdf5serie/dump/: Makefile.am  h5dumpserie.cc  h5dumpserie.m.in  h5dumpserie.txt  h5flushserie.cc  h5lsserie-listlinks.xsl  h5lsserie.bat.in  h5lsserie.cc  h5lsserie.in
trunk/hdf5serie/hdf5serie/rereadmetadata/: base.h
trunk/hdf5serie/hdf5serie/rereadmetadata/readwritetest/: read.cc
trunk/hdf5serie/rereadmetadata/: structseriero.h
trunk/hdf5serie/rereadmetadata/readwritetest/: write.cc
trunk/src/: Makefile.am  serie1d.h  serie2d.cc  serie2d.h  simpleattribute.cc  simpleattribute.h  simpledataset.cc  simpledataset.h  structserie.h  toh5type.cc  toh5type.h  vectorserie.h
trunk/src/check/: Makefile.am  testdump.sh  testlib.cc  valgrindtestdump.sh  valgrindtestlib.sh
trunk/src/dump/: Makefile.am  h5dumpserie.cc  h5dumpserie.m.in  h5lsserie.in  h5lsserie.xsl
trunk/src/rereadmetadata/: Makefile.am  groupro.cc  groupro.h  h5filero.cc  h5filero.h  h5rereadmetadata.h  serie2dro.h
trunk/src/rereadmetadata/readwritetest/: read.cc  write.cc
(+22 files in other folders)
